--- a/test.html
+++ b/test.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
         <head>
+        <link rel="icon" href = "https://gamepedia.cursecdn.com/brawlhalla_gamepedia/thumb/2/2f/Finn_Sword.png/1200px-Finn_Sword.png">
         <!--for metadata such as title, charset, description, keywords, author, viewport configs, CSS stylesheets, javascript, FavIcon-->
         <title>AT page</title>
         </head>
