--- a/test.html
+++ b/test.html
@@ -6,7 +6,7 @@
         </head>
         <body>
 <h1>adventure time themed webpage for practicing syntax</h1>
-<p>ello. this is an <a href="https://adventuretime.fandom.com/wiki/Adventure_Time">website.</a></p>
+<p>ello. this is an <a href="https://adventuretime.fandom.com/wiki/Adventure_Time" target="_blank">website.</a></p>
 <img src="./bmo.jpg"/>
 <p>wow look its <strong>bmo</strong> evybody <em>meow</em></p>
         </body>
